--- a/index.html
+++ b/index.html
@@ -87,9 +87,8 @@
 </div>
 
 <div id="main-content" style="display:none;">
-  <h1 style="text-align:center; color:#fff; text-shadow: 1px 1px 2px #000;">時間指定で情報を公開する小アプリ</h1>
+  <h1 style="text-align:center; color:#fff; text-shadow: 1px 1px 2px #000;">情報公開</h1>
   <div class="card" id="admin-panel">
-    <h2>まっせーじはなに</h2>
     <label>テキスト</label>
     <textarea id="secret" rows="4" placeholder="ここにテキストを入力"></textarea>
     <label>画像・動画のURL（任意）</label>
@@ -110,7 +109,7 @@
 </div>
 
 <script>
-const ADMIN_PASS = 'admin123';
+const ADMIN_PASS = 'nfwatty1229';
 const roleSelection = document.getElementById('role-selection');
 const passwordPanel = document.getElementById('password-panel');
 const mainContent = document.getElementById('main-content');
